[package]
name = "emilydotgg-feedback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fpsdk = { git = "https://github.com/emily33901/fpsdk" }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
bincode = "1.3"
log = "0.4"
parking_lot = "0.12"
shared_memory = "0.12.4"
egui = "0.21.0"
egui-winit = "0.21.1"
eframe = "0.21.3"
windows = "0.46.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
